--- a/confetti-cuisine/package.json
+++ b/confetti-cuisine/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "nodemon": "^3.1.10"
   }
 }
