--- a/confetti-cuisine/package.json
+++ b/confetti-cuisine/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.19.2",
     "nodemon": "^3.1.10"
