--- a/confetti-cuisine/package.json
+++ b/confetti-cuisine/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon main.js"
+    "start": "node main.js",
+    "dev": "nodemon main.js"
   },
   "author": "elmoir",
   "license": "ISC",
@@ -17,7 +18,9 @@
     "express-ejs-layouts": "^2.5.1",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.19.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "router": "^2.2.0"
   }
 }
